# 100k

./: .gitignore  AUTO_TRADING_SETUP.md  DATABASE_SETUP.md  Dockerfile  LOG_GUIDE.md  NGINX_SETUP.md  QUICK_START.md  README.md  README_WEB.md  SERVER_SETUP.md  TRADINGVIEW_WEBHOOK.md  WEBHOOK_TRADING_GUIDE.md  WEB_DASHBOARD.md  __init__.py  docker-compose.yaml  ecosystem.config.example.js  ecosystem.config.js  main.py  nginx.conf.example  pyproject.toml  queries.sql  requirements.txt  restart.sh  start.sh  tradingview_alert_eth.pine  tradingview_webhook_indicator.pine
analytics/: __init__.py  db_logger.py  metrics.py  monte_carlo.py  reflection_prompt.py  regime_analysis.py  report_generator.py  statistical_tests.py
backtest/: __init__.py  engine.py  portfolio.py  trade_logger.py  walk_forward.py
config/: exchange_config.yaml  logging_config.yaml  settings.yaml
data/: __init__.py  cache_manager.py  loader.py  preprocessor.py  realtime_feed.py
execution/: __init__.py  order_executor.py  position_manager.py  risk_manager.py  slippage_model.py
indicators/: __init__.py  base.py  custom.py  trend.py  volatility.py  volume.py
optimization/: __init__.py  bayesian_opt.py  continuous_optimizer.py  grid_search.py  reflection_optimizer.py  robustness_test.py
strategy/: __init__.py  base_strategy.py  ema_bb_turtle.py  regime_detector.py  signal_generator.py  strategy_registry.py
tests/: test_indicators.py  test_strategy.py
trading/: __init__.py  adaptive_risk_manager.py  decision_logger.py  experience_learner.py  failure_analyzer.py  live_trader.py  risk_guardian.py  (+5 more)
(+14 files in other folders)
