[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-backtest-framework"
version = "2.0.0"
description = "BTCUSDT 1분봉 자동매매 백테스트 프레임워크"
authors = [
    {name = "BTC Backtest Team"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pandas-ta>=0.3.14b",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "dash>=2.11.0",
    "optuna>=3.2.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "ccxt>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["btc_backtest_framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

